make register pom aspects via extensions